--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "nano25519"]
 	path = nano25519
 	url = https://github.com/Nanoquake/nano25519.git
+[submodule "nanoquake_theme_mod"]
+	path = nanoquake_theme_mod
+	url = https://github.com/CommodoreAmiga/Nanoquake-theme-mod.git
